# hunter-tiny-dnn

./: CMakeLists.txt  LICENSE  README.md
tiny_dnn/: nodes.h
tiny_dnn/util/: serialization_functions.h  util.h
